# SKN30-2nd-4Team

./: .env copy  AGENTS.md  README.md  migrate.sh  pyproject.toml
data/api/: NAVER_API_SPEC.md  README.md  __init__.py  kobis_client.py  naver_client.py  naver_dto.py  naver_request_test.http
data/db/: README.md  db_manager.py  insert_movie.ipynb  insert_movie_guide.ipynb  insert_naver_trend.ipynb  insert_people_guide.ipynb
data/db/migrate/: 1.CREATE_TABLE.sql  2.INSERT_BOX_OFFICE_2010_2013.sql  3.INSERT_BOX_OFFICE_2014_2016.sql  4.INSERT_BOX_OFFICE_2017_2019.sql  5.INSERT_BOX_OFFICE_2020_2023.sql  5.INSERT_MOVIE_INFO_2017_2025.sql  6.INSERT_BOX_OFFICE_2023_2025.sql  7.INSERT_HOLIDAYS_2017_2025.sql  7.INSERT_MOVIE_INFO_2010_2025.sql  8.INSERT_PEOPLE_INFO_2010_2025.sql  9.INSERT_HOLIDAYS_INFO_2010_2025.sql
docs/: GOAL.md  인공지능 데이터 전처리 결과서.md
ml/: 00_feature_table.ipynb  01_eda_baseline.ipynb  02_boosting.ipynb  03_deep_learning_pre3.ipynb  README.md  process_feature_table.ipynb
ml/data/: CHANGELOG.md  baseline_feature_table.md
ml/data/processed/: feature_table_v1.csv  feature_table_v2.csv  feature_table_v3.csv  feature_table_v4.csv
util/: config.py
